Opened 13 years ago
Closed 10 years ago
#4244 closed bug (fixed)
Can't remove pulse replicants.
Reported by: | kvdman | Owned by: | stpere |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Pulse | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
On dual processor machines (or greater), when you start Pulse and drag out a replicant for the processor to the desktop, there's no way to remove it besides deleting tracker_shelf and restarting.
Attachments (1)
Change History (19)
by , 13 years ago
Attachment: | screenshot1.png added |
---|
comment:1 by , 13 years ago
Platform: | All → x86 |
---|---|
Version: | R1/pre-alpha1 → R1/alpha1 |
Can drag a replicant into the deskbar, but cannot remove it. Cannot right click, does the same as left clicking (does it 'disable' a CPU core? not sure of the effect :).
comment:4 by , 12 years ago
I could fix it quite easily, but it involves having the dragger icon into the green square. It's not really pretty but if nobody finds a better solution, I could submit the correction.
comment:5 by , 12 years ago
I have of course no idea how it's implemented and if my idea is at all possible...
Right now, the CPU buttons are exactly the size of the green buttons. Could their views be enlarged with a transparent background to have enough room for the Replicant dragger? Like this:
Now: _______ | | | 1 | |_____| O Then: _______ | | | 1 | |_____| |////O|
"O" being the dragger, "/" the transparent part of the enlarged view.
comment:6 by , 12 years ago
Yes, this is possible now. One has to use code similar to ActivityMonitor or DeskCack in order for it to work.
comment:7 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:8 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Hi, should be fixed in hrev35110. Comments welcome.
follow-up: 12 comment:9 by , 12 years ago
Looks like you forgot to include string.h in CPUButton.h.
After replicating, the CPU number isn't quite centered in its button. I did like the former, smaller buttons better, but I'll get used to it. :) Thanks!
follow-up: 11 comment:10 by , 12 years ago
Oh, and the About... menu of the Replicant says "CPUButton" instead of "Pulse". :)
comment:11 by , 12 years ago
follow-up: 13 comment:12 by , 12 years ago
Replying to humdinger:
Looks like you forgot to include string.h in CPUButton.h.
After replicating, the CPU number isn't quite centered in its button. I did like the former, smaller buttons better, but I'll get used to it. :) Thanks!
For the size of the replicant (when used on the desktop for example), I could make the dragger a little bit closer to the button, a bit like it is on deskcalc, where it overlaps the button's border.. do you think it would be better?
comment:13 by , 12 years ago
Replying to stpere:
For the size of the replicant (when used on the desktop for example), I could make the dragger a little bit closer to the button, a bit like it is on deskcalc, where it overlaps the button's border.. do you think it would be better?
The more compact it gets the better. But only if it isn't too much work. It's really only a small issue. You've fixed the important thing, having the Replicant removable. :)
comment:16 by , 10 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
It looks like this bug is valid again. I just dragged two replicants of CPU buttons into Deskbar, and cannot remove them now. I'm using hrev43238
comment:17 by , 10 years ago
Component: | Applications → Applications/Pulse |
---|
Not so useful... but attached anyway.