Pulse : Couldn't close Pulse CPUButton replicants

* It nows leave enough room to display the dragger into the replicant in most
   cases...

 * ...excepts in deskbar.  Then it instead allows you to right click to 
   access a popup menu allowing you to close the replicant.

   The dragger isn't shown due to space constraints.

Fixing ticket #4244.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35110 a95241bf-73f2-0310-859d-f6bbb57e9c96